REFACTORING: OOP Structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
 *.pyc
 __pycache__/
 logs/
+new_logs/
 data/
-saved_models_final/
-cifar10_final.csv
-cifar10.csv
-csvs/
-*.yaml
-*.csv
+saved_models/
+env_test_models/
 env_models/
-upper_logs/
-utils/singular
 test_model/
-QUB_Logs/
+csvs/
 commands/
-grad_norm_logs/
-2_logs/
-env_models_2/
-tax_logs/
-QUB_GAP/
+previous_things/
